--- a/dune
+++ b/dune
@@ -3,7 +3,7 @@
 (menhir
   (modules parser)
   (infer true)
-  (flags --explain --dump))
+  (flags --explain --dump --trace))
 
 (executable
  (name main))
